--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,4 +20,7 @@ gpu = ["cupy-cuda13x"]
 pyesn = "pyesn.cli:main"
 
 [tool.setuptools.packages.find]
-where = ["src"]          
+where = ["src"] 
+
+[tool.setuptools.package-data]
+pyesn = ["config_templates/**"]
