--- a/src/pyesn/config_templates/train/batch.yaml
+++ b/src/pyesn/config_templates/train/batch.yaml
@@ -1,4 +1,6 @@
-ids: ["20210508_00000", "20210508_11111"]
-paths: ["/home/takumi/share/research-prj/data/complement/20210508/064648S1_ffmpeg.jpg", 
-        "/home/takumi/share/research-prj/data/complement/20210508/064936S2_ffmpeg.jpg"]
-class_ids: [2, 2]
+ids: ["sample_001", "sample_002"]
+paths: [
+  "/path/to/your/data/sample_001.jpg",
+  "/path/to/your/data/sample_002.png"
+]
+class_ids: [0, 1]
