--- a/src/pyesn/config_templates/train/single.yaml
+++ b/src/pyesn/config_templates/train/single.yaml
@@ -1,3 +1,3 @@
-id: "20210508_00000"
-path: "/home/takumi/share/research-prj/data/complement/20210508/064648S1_ffmpeg.jpg"
-class_id: 2
+id: "sample_001"
+path: "/path/to/your/data/sample_001.jpg"
+class_id: 0
