fix Errors caused by changing repository name

--- a/configs/train/tenfold.yaml
+++ b/configs/train/tenfold.yaml
@@ -1,2 +1,15 @@
-csv_dir: "/home/takumi/share/research-prj/dataset/10fold_csvs/" 
+csv_dir: "dataset/10fold_csvs/" 
+
 workers: 10
+
+weight_path: "artifacts/10fold_weights"
+
+# search_space:
+#   model.Nx: [200, 300, 400, 500, 600, 700, 800, 900]
+#   model.rho: [0.9]
+#   model.input_scale: [0.01, 0.005, 0.001]
+
+search_space:
+  model.Nx: [10]
+  model.rho: [0.9]
+  model.input_scale: [0.01]
