Add evaluate summary

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ dependencies = [
     "opencv-python",
     "PyYAML",
     "omegaconf",
-    "networkx"
+    "networkx",
+    "matplotlib"
 ]
 
 [project.optional-dependencies]
