--- a/configs/train/tenfold.yaml
+++ b/configs/train/tenfold.yaml
@@ -4,12 +4,7 @@ workers: 10
 
 weight_path: "artifacts/10fold_weights"
 
-# search_space:
-#   model.Nx: [200, 300, 400, 500, 600, 700, 800, 900]
-#   model.rho: [0.9]
-#   model.input_scale: [0.01, 0.005, 0.001]
-
 search_space:
-  model.Nx: [9]
+  model.Nx: [200, 300, 400, 500, 600, 700, 800, 900]
   model.rho: [0.9]
-  model.input_scale: [0.01]
+  model.input_scale: [0.01, 0.005, 0.001]
