--- a/src/pyesn/config_templates/train/tenfold.yaml
+++ b/src/pyesn/config_templates/train/tenfold.yaml
@@ -5,6 +5,6 @@ workers: 10
 weight_path: "artifacts/10fold_weights"
 
 search_space:
-  model.Nx: [200, 300]
-  model.rho: [0.7, 0.9]
+  model.Nx: [200, 300, 400, 500, 600, 700, 800, 900]
+  model.rho: [0.9]
   model.input_scale: [0.01, 0.005, 0.001]
