--- a/configs/train/tenfold.yaml
+++ b/configs/train/tenfold.yaml
@@ -2,7 +2,7 @@ csv_dir: "dataset/10fold_csvs/"
 
 workers: 10
 
-weight_path: "artifacts/10fold_weights"
+weight_dir: "artifacts/10fold_weights"
 
 search_space:
   model.Nx: [200, 300, 400, 500, 600, 700, 800, 900]
