--- a/src/pyesn/config_templates/integ/grid.yaml
+++ b/src/pyesn/config_templates/integ/grid.yaml
@@ -1,7 +1,7 @@
 train:
   csv_dir: "dataset/10fold_csvs/"
   workers: 10
-  weight_path: "artifacts/10fold_weights"
+  weight_dir: "artifacts/10fold_weights"
   search_space:
     model.Nx: [200, 300]
     model.rho: [0.9]
