--- a/configs/evaluate/tenfold.yaml
+++ b/configs/evaluate/tenfold.yaml
@@ -3,3 +3,11 @@ weight_dir: "artifacts/10fold_weights"
 
 parallel: true
 workers: 4
+
+# 必須: 評価対象とするパラメタ組（'model.' 接頭辞）
+# 例は代表的な組（Nx=200, density=0.5, rho=0.9, input_scaleは2値）
+search_space:
+	model.Nx: [200]
+	model.density: [0.5]
+	model.input_scale: [0.001, 0.005]
+	model.rho: [0.9]
