--- a/src/pyesn/config_templates/evaluate/tenfold.yaml
+++ b/src/pyesn/config_templates/evaluate/tenfold.yaml
@@ -3,3 +3,10 @@ weight_dir: "artifacts/10fold_weights"
 
 parallel: true
 workers: 4
+
+# 必須: 評価対象とするパラメタ組（'model.' 接頭辞）
+search_space:
+	model.Nx: [200]
+	model.density: [0.5]
+	model.input_scale: [0.001, 0.005]
+	model.rho: [0.9]
