--- a/configs/evaluate/analysis.yaml
+++ b/configs/evaluate/analysis.yaml
@@ -2,7 +2,8 @@
 # 既存 tenfold の予測CSVから、パラメタ組に一致する画像単位の成功/失敗履歴を集約し、
 # 極端なケース（全失敗/全成功）を列挙、画像のコピーも行います。
 
-weight_dir: "artifacts/tenfold_integ/weights"
+# 10-fold 用の成果物ルート（eval/ 配下の既存出力を参照します）
+tenfold_root: "artifacts/tenfold_integ"
 
 # 予測CSV（絶対/相対どちらでも可）。未指定なら <tenfold_integ>/eval/evaluation_predictions.csv を検索します。
 # Predictions CSV name under the eval root
