--- a/configs/evaluate/tenfold.yaml
+++ b/configs/evaluate/tenfold.yaml
@@ -1,15 +1,15 @@
 csv_dir: "dataset/10fold_csvs/"
 
+# 実験名を指定（必須、train tenfoldと同じ名前）
+experiment_name: "tenfold_integ"
+
 parallel: true
 workers: 4
-
-# 10-fold 用の成果物ルート（weights/, eval/ などの固定構成に展開されます）
-tenfold_root: "artifacts/tenfold_integ"
 
 # 必須: 評価対象とするパラメタ組（'model.' 接頭辞）
 # 例は代表的な組（Nx=200, density=0.5, rho=0.9, input_scaleは2値）
 search_space:
-	model.Nx: [200]
-	model.density: [0.5]
-	model.input_scale: [0.001, 0.005]
-	model.rho: [0.9]
+  model.Nx: [200]
+  model.density: [0.5]
+  model.input_scale: [0.001, 0.005]
+  model.rho: [0.9]
