--- a/src/esn_lab/config_templates/evaluate/tenfold.yaml
+++ b/src/esn_lab/config_templates/evaluate/tenfold.yaml
@@ -1,14 +1,14 @@
 csv_dir: "dataset/10fold_csvs/"
 
+# 実験名を指定（必須、train tenfoldと同じ名前）
+experiment_name: "hp_search_v1"
+
 parallel: true
 workers: 4
 
-# 10-fold artifacts root (expands to weights/, eval/)
-tenfold_root: "artifacts/tenfold_integ"
-
 # 必須: 評価対象とするパラメタ組（'model.' 接頭辞）
 search_space:
-	model.Nx: [200]
-	model.density: [0.5]
-	model.input_scale: [0.001, 0.005]
-	model.rho: [0.9]
+  model.Nx: [200]
+  model.density: [0.5]
+  model.input_scale: [0.001, 0.005]
+  model.rho: [0.9]
