--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,10 @@ dependencies = [
 
 [project.optional-dependencies]
 gpu = ["cupy-cuda13x"]
+test = [
+    "pytest>=7.0.0",
+    "pytest-cov>=4.0.0",
+]
 
 [project.scripts]
 esnlab = "esn_lab.cli:main"
@@ -44,3 +48,14 @@ where = ["src"]
 
 [tool.setuptools.package-data]
 esn_lab = ["config_templates/**"]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+addopts = [
+    "--strict-markers",
+    "--strict-config",
+    "-ra",
+]
