--- a/configs/integ/grid.yaml
+++ b/configs/integ/grid.yaml
@@ -3,7 +3,7 @@
 # 事前に convert_10fold_to_npy.py でデータを変換しておく必要があります
 
 # 実験名（必須）
-experiment_name: "tenfold_integ_genkai2"
+experiment_name: "tenfold_integ_omen"
 
 base:
   # NPY形式のデータソース設定
@@ -13,10 +13,10 @@ base:
     # CSV形式を使用する場合は以下のように変更:
     # type: "csv"
     # csv_dir: "dataset/10fold_csvs/"
-  workers: 60
+  workers: 10
 
 param_grid:
-  "model.Nx": &nx_list [200, 300, 400, 500, 600, 700, 800, 900, 1000]
+  "model.Nx": &nx_list [700, 800]
   "model.density": &density_list [0.5]
   "model.rho": &rho_list [0.9]
   "model.input_scale": &input_scale_list [0.01, 0.005, 0.001]
