--- a/configs/integ/grid.yaml
+++ b/configs/integ/grid.yaml
@@ -3,23 +3,23 @@
 # 事前に convert_10fold_to_npy.py でデータを変換しておく必要があります
 
 # 実験名（必須）
-experiment_name: "tenfold_integ_omen"
+experiment_name: "tenfold_integ_devtest700a"
 
 base:
   # NPY形式のデータソース設定
   data_source:
     type: "npy"
-    npy_dir: "dataset/10fold_npy/"
+    npy_dir: "dataset/10fold_npy_div/a"
     # CSV形式を使用する場合は以下のように変更:
     # type: "csv"
     # csv_dir: "dataset/10fold_csvs/"
   workers: 10
 
 param_grid:
-  "model.Nx": &nx_list [700, 800]
+  "model.Nx": &nx_list [700]
   "model.density": &density_list [0.5]
   "model.rho": &rho_list [0.9]
-  "model.input_scale": &input_scale_list [0.01, 0.005, 0.001]
+  "model.input_scale": &input_scale_list [0.001]
 
 train: {}
 
