--- a/projects/Makefile
+++ b/projects/Makefile
@@ -4,7 +4,7 @@ TRAIN_CONFIG ?= projects/configs/tenfold_train.yaml
 EVAL_CONFIG ?= projects/configs/tenfold_eval.yaml
 
 train:
-	python -m projects.apps.tenfold_train_app --config $(TRAIN_CONFIG)
+	python -m projects.apps.tenfold_train_appv3 --config $(TRAIN_CONFIG)
 
 eval:
 	python -m projects.apps.tenfold_eval_app --config $(EVAL_CONFIG)
