--- a/projects/configs/tenfold_train.yaml
+++ b/projects/configs/tenfold_train.yaml
@@ -1,13 +1,13 @@
 experiment_name: "test"
 output_base_dir: "outputs/experiments/renewd_v3"
 data_source_base_dir: "dataset/10fold_npy"
-# folds: ["a", "b", "c", "d", "e", "f", "g", "h", "i", "j"]
-folds: ["d"]
-workers: 10
+folds: ["a", "b", "c", "d", "e", "f", "g", "h", "i", "j"]
+# folds: ["d"]
+workers: 12
 
 Nu: 256
 Ny: 3
-Nx: [600]
-input_scale: [0.0001]
+Nx: [700]
+input_scale: [0.0001, 0.0005, 0.0001]
 density: [0.5]
 rho: [0.9]
